--- a/siteapp/templates/siteapp/input.html
+++ b/siteapp/templates/siteapp/input.html
@@ -1,7 +1,12 @@
+<head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
 <body>
 <form method='POST' action='xml/'>
 {% csrf_token %}
-<input type='text' name='url'>
-<input type='submit' name='submit'>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Enter Url for Generation of XML SITEMAP</label>
+    <input type="text" name='url' class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder='www.abcd.xy'>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-</body>
