--- a/siteapp/templates/siteapp/input.html
+++ b/siteapp/templates/siteapp/input.html
@@ -1,12 +1,25 @@
 <head>
+<title>SiteMap Generator</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<style>
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -250px;
+  color:white;
+}
+</style>
 </head>
-<body>
+<body style='background-color:black'>
 <form method='POST' action='xml/'>
 {% csrf_token %}
-  <div class="form-group">
-    <label for="exampleInputEmail1">Enter Url for Generation of XML SITEMAP</label>
-    <input type="text" name='url' class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder='www.abcd.xy'>
-  </div>
+  <div class='form-group centered' >
+    <label for="exampleInputEmail1" style="font-size:30px">Enter URL for Generation of XML SITEMAP</label>
+    <input type="text" name='url' class="form-control" style="font-size:30px"placeholder='www.abcd.xy'>
+    <div style="margin:10px 0 0 230px">
   <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
+</div>
 </form>
